# pytorch-toolz

./: LICENSE  README.md  pyproject.toml
examples/: RNN.ipynb  UNet.ipynb
pytorch_toolz/: functools.py  operator.py  parallel.py
src/pytorch_toolz/: __version__.py  functools.py  itertools.py  nn.py  operator.py
tests/: framework.py  test_functools.py  test_itertools.py  test_operator.py
