[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch_toolz"
authors = [
  { name="Ilya", email="ilykuleshov@yandex.ru" },
]
license='MIT'
description = "Functional addition to pytorch for better model-building"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies=[
]

[project.urls]
"Homepage" = "https://github.com/Ilykuleshov/pytorch-toolz"
"Bug Tracker" = "https://github.com/Ilykuleshov/pytorch-toolz/issues"

[tool.hatch]
version.path = "src/pytorch_toolz/__version__.py"
